src/app-web/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-web

spec:
  selector:
    app.kubernetes.io/name: app-web
  ports:
    - port: 80
      targetPort: 3000
