src/app-web/deploy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-web

spec:
  entryPoints:
    - public
  tls:
    certResolver: main
  routes:
    - kind: Rule
      match: Host(`git-guesser.dennisskoko.com`)
      services:
        - name: app-web
          port: 80
      middlewares:
        - name: basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
spec:
  basicAuth:
    secret: basic-auth-credentials
